<resources>
    <string name="app_name">FoodApp</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string-array name="name_food">
        <item>Pizza</item>
        <item>Burger</item>
        <item>Hotdog</item>
        <item>Drink</item>
        <item>video</item>
        <item>Pizza</item>
        <item>Burger</item>
        <item>Hotdog</item>
        <item>Drink</item>
        <item>video</item>
        <item>video</item>
    </string-array>
    <string-array name="food_description">
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
        <item>This is random description. </item>
    </string-array>
    <string name="menu_Support">Support</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Profie">Profile</string>
</resources>