<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/btn_1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/bottom_btn2"
            android:title="@string/menu_Profie" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/bottom_btn4"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/bottom_btn3"
            android:title="@string/menu_Support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>